--- a/components/entitlement/org.wso2.carbon.identity.api.server.entitlement/org.wso2.carbon.identity.api.server.entitlement.v1/src/main/resources/entitlements-api.yaml
+++ b/components/entitlement/org.wso2.carbon.identity.api.server.entitlement/org.wso2.carbon.identity.api.server.entitlement.v1/src/main/resources/entitlements-api.yaml
@@ -352,10 +352,51 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PolicyDataModel'
+              $ref: '#/components/schemas/PolicyDTO'
       responses:
         '201':
           description: Policy created
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+    patch:
+      summary: Update policy
+      tags:
+        - Policy Administration Point
+      description: |
+        This API provides the capability to Update a Policy.<br>
+          <b>Permission required:</b> <br>
+              * /permission/admin/manage/identity/entitlementmgt/update <br>
+          <b>Scope required:</b> <br>
+              * internal_entitlement_mgt_update
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PolicyDTO'
+      responses:
+        '200':
+          description: Policy updated.
         '400':
           description: Bad Request
           content:
@@ -425,11 +466,7 @@ paths:
           required: true
           schema:
             type: string
-        - in: query
-          name: version
-          required: false
-          schema:
-            type: string
+        - $ref: '#/components/parameters/isPDPPolicy'
       responses:
         '200':
           content:
@@ -437,53 +474,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/PolicyDataModel'
           description: A policy object
-        '400':
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        '500':
-          description: Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-
-    patch:
-      summary: Update policy
-      tags:
-        - Policy Administration Point
-      description: |
-        This API provides the capability to Update a Policy.<br>
-          <b>Permission required:</b> <br>
-              * /permission/admin/manage/identity/entitlementmgt/update <br>
-          <b>Scope required:</b> <br>
-              * internal_entitlement_mgt_update
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/PolicyDataModel'
-      responses:
-        '200':
-          description: Policy updated.
         '400':
           description: Bad Request
           content:
