--- a/components/entitlement/org.wso2.carbon.identity.api.server.entitlement/pom.xml
+++ b/components/entitlement/org.wso2.carbon.identity.api.server.entitlement/pom.xml
@@ -34,6 +34,7 @@
 
     <modules>
         <module>org.wso2.carbon.identity.api.server.entitlement.v1</module>
+        <module>org.wso2.carbon.identity.api.server.entitlement.common</module>
     </modules>
     
 </project>
